# die-vfm

./: .gitignore  AGENTS.md  README.md  hydra_linear_probe_config.yaml  pyproject.toml
configs/: config.yaml
die_vfm/: __init__.py
docs/: checkpoint-resume-spec.md  current-spec.md  domain-adapter-spec.md  domain-baseline-closeout.md  domain-baseline-playbook.md  future-spec.md  implementation-roadmap.md  round2-experiment-planning-draft.md  round2-first-pilot-readiness-checklist.md  testing-spec.md
scripts/: analyze_pair_benchmark_slices.py  build_pair_benchmark_manifest.py  build_round1_domain_assets.py  build_round2_pilot_subset.py  evaluate_pair_benchmark.py  export_embeddings.py  generate_pair_candidates.py  pair_review_app.py  run.py  run_centroid.py  run_knn.py  run_linear_probe.py  run_pair_review.py  run_retrieval.py  run_round2_postprocess.py  scan_domain_manifest_images.py  train.py
tests/: _artifact_test_utils.py  test_attn_pooler_v1.py  test_bootstrap_runtime.py  test_centroid_evaluator.py  test_centroid_runner.py  test_checkpoint_manager.py  test_cifar10_dataset.py  test_config.py  test_domain_dataset.py  test_dummy_dataset.py  test_embedding_artifact.py  test_embedding_exporter.py  test_embedding_loader.py  test_export_embeddings_script.py  test_knn_evaluator.py  test_knn_runner.py  test_linear_probe.py  test_linear_probe_io.py  test_linear_probe_metrics.py  test_linear_probe_runner.py  test_linear_probe_trainer.py  test_minimum_e2e_path.py  test_pooler_builder.py  test_retrieval_evaluator.py  test_retrieval_runner.py  test_round1_runner.py  (+11 more)
(+75 files in other folders)
